// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-desktop 1`] = `
<DocumentFragment>
  <div
    class="relative bg-[#13131F] rounded-2xl border border-[#1C1C28] p-6 mb-4 text-white overflow-visible"
    style="width: 1280px;"
  >
    <div
      class="relative z-10 space-y-4"
    >
      <div>
        <label
          class="block text-xs font-semibold text-gray-400 uppercase tracking-wider mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-[#8B5CF6]"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-500"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-xs font-bold text-gray-500 uppercase tracking-widest flex items-center gap-2"
          >
            <svg
              class="text-[#8B5CF6]"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Advanced Filters
          </h3>
          <button
            aria-label="Close filters"
            class="text-xs text-[#8B5CF6] hover:text-[#A78BFA] font-medium transition-colors"
            title="Close filters"
            type="button"
          >
            Close
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider flex items-center gap-2"
            >
              <svg
                class="w-3 h-3"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider flex items-center gap-2"
            >
              <svg
                class="w-3 h-3"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              From Year
            </label>
            <input
              class="w-full px-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all text-sm"
              max="2026"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              To Year
            </label>
            <input
              class="w-full px-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all text-sm"
              max="2026"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-mobile 1`] = `
<DocumentFragment>
  <div
    class="relative bg-[#13131F] rounded-2xl border border-[#1C1C28] p-6 mb-4 text-white overflow-visible"
    style="width: 375px;"
  >
    <div
      class="relative z-10 space-y-4"
    >
      <div>
        <label
          class="block text-xs font-semibold text-gray-400 uppercase tracking-wider mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-[#8B5CF6]"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-500"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-xs font-bold text-gray-500 uppercase tracking-widest flex items-center gap-2"
          >
            <svg
              class="text-[#8B5CF6]"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Advanced Filters
          </h3>
          <button
            aria-label="Close filters"
            class="text-xs text-[#8B5CF6] hover:text-[#A78BFA] font-medium transition-colors"
            title="Close filters"
            type="button"
          >
            Close
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider flex items-center gap-2"
            >
              <svg
                class="w-3 h-3"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider flex items-center gap-2"
            >
              <svg
                class="w-3 h-3"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              From Year
            </label>
            <input
              class="w-full px-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all text-sm"
              max="2026"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              To Year
            </label>
            <input
              class="w-full px-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all text-sm"
              max="2026"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchAndFilter — responsive checks renders a compact snapshot (mobile, tablet, desktop) for visual regression: searchandfilter-tablet 1`] = `
<DocumentFragment>
  <div
    class="relative bg-[#13131F] rounded-2xl border border-[#1C1C28] p-6 mb-4 text-white overflow-visible"
    style="width: 768px;"
  >
    <div
      class="relative z-10 space-y-4"
    >
      <div>
        <label
          class="block text-xs font-semibold text-gray-400 uppercase tracking-wider mb-2 flex items-center gap-2"
          for="search"
        >
          <svg
            class="h-4 w-4 text-[#8B5CF6]"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Search Releases
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
          >
            <svg
              class="h-5 w-5 text-gray-500"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="block w-full pl-10 pr-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all"
            id="search"
            placeholder="Search by title, artist, or label..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-hidden="false"
        class="transition-all duration-200 ease-in-out overflow-hidden max-h-[1200px] opacity-100 translate-y-0 py-1"
      >
        <div
          class="flex items-center justify-between mb-3"
        >
          <h3
            class="text-xs font-bold text-gray-500 uppercase tracking-widest flex items-center gap-2"
          >
            <svg
              class="text-[#8B5CF6]"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <path
                d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Advanced Filters
          </h3>
          <button
            aria-label="Close filters"
            class="text-xs text-[#8B5CF6] hover:text-[#A78BFA] font-medium transition-colors"
            title="Close filters"
            type="button"
          >
            Close
          </button>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
        >
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider flex items-center gap-2"
            >
              <svg
                class="w-3 h-3"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Artist
            </label>
            <select
              data-testid="artist-dropdown"
            >
              <option
                value=""
              >
                Select Artist
              </option>
              <option
                value="1"
              >
                Test Artist
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider flex items-center gap-2"
            >
              <svg
                class="w-3 h-3"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              Genre
            </label>
            <select
              data-testid="genre-dropdown"
            >
              <option
                value=""
              >
                Select Genre
              </option>
              <option
                value="1"
              >
                Metal
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Label
            </label>
            <select
              data-testid="label-dropdown"
            >
              <option
                value=""
              >
                Select Label
              </option>
              <option
                value="1"
              >
                Test Label
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Country
            </label>
            <select
              data-testid="country-dropdown"
            >
              <option
                value=""
              >
                Select Country
              </option>
              <option
                value="1"
              >
                UK
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Format
            </label>
            <select
              data-testid="format-dropdown"
            >
              <option
                value=""
              >
                Select Format
              </option>
              <option
                value="1"
              >
                Vinyl
              </option>
            </select>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              Recording Type
            </label>
            <div>
              <button
                type="button"
              >
                All recordings
              </button>
            </div>
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              From Year
            </label>
            <input
              class="w-full px-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all text-sm"
              max="2026"
              min="1900"
              placeholder="e.g., 1970"
              type="number"
              value=""
            />
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
            >
              To Year
            </label>
            <input
              class="w-full px-3 py-2.5 bg-[#0A0A10] border border-[#2E2E3E] rounded-xl focus:outline-none focus:border-[#8B5CF6] text-white placeholder-gray-600 transition-all text-sm"
              max="2026"
              min="1900"
              placeholder="e.g., 2024"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
